--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Mundana Free Jekyll Theme"
+title: "Blog Narwastu Nagoro"
 layout: default
 pagination:
 enabled: true
-description: "A great Jekyll theme developed by Sal @wowthemesnet."
+description: "Blog Narwastu Nagoro membahas seputar website, WordPress, Static Site, optimasi dan lainnya"
 ---
 
 <div class="container">
